# MAPsDPR

./: SETUP.md  app.py  models.py  pyproject.toml
attached_assets/: Pasted-AI-Powered-Preliminary-DPR-Generator-using-Google-Maps-and-google-earth-Imagery-1-Project-Title-G-1744378969526.txt
instance/: geosight.db
static/css/: custom.css  loader.css
static/js/: analysis.js  map.js  report.js
templates/: index.html  layout.html  project_reports.html  projects.html  report.html  view_project.html
tests/: test_app.py
tests/utils/: test_image_processor.py  test_land_cover.py  test_object_detection.py  test_report_generator.py
utils/: __init__.py  image_processor.py  land_cover.py  object_detection.py  report_generator.py
