[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "fpdf2>=2.7.8", # Added fpdf2
    "requests>=2.31.0", # Added requests
    "pytest>=8.0.0", # Added pytest
]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["."]
